Projet chatbot IA

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>MiageGPT with Dall-E</title>
+    <title>AI Chatbot Mini Projet</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <script type="module" src="js/sendRequestToServer.js"></script>
@@ -25,7 +25,7 @@
                     <option value="none">Normal prompt</option>
                     <option value="/image">Image</option>
                     <option value="/speech">Speech</option>
-                    <option value="/stable">Stable Diffusion</option>
+                    <option value="/stable-diffusion">Stable Diffusion</option>
                 </select>
                 <input id="user-input">
                 <div id="submit">➢</div>
